{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 142,
  "lineage": "ae9123e4-8008-e6a6-4d27-0eee7f4b0d7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a9c699d2ab3f9",
            "arn": "arn:aws:ec2:eu-west-1:831926616791:instance/i-00262776505a0d308",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00262776505a0d308",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a22fb883b5b34eb0",
            "private_dns": "ip-172-31-24-133.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.133",
            "public_dns": "ec2-18-201-226-6.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.201.226.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d6cd7eaf2ba341a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "web-20250318153749330900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03460af12f25a303e",
            "tags": {
              "Name": "demo_sabry_2",
              "Terraform": "true",
              "az": "eu-west-1a",
              "region": "eu-west-1"
            },
            "tags_all": {
              "Name": "demo_sabry_2",
              "Terraform": "true",
              "az": "eu-west-1a",
              "region": "eu-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014b8858c7f320bd6"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:security-group/sg-014b8858c7f320bd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014b8858c7f320bd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-20250318153749330900000001",
            "name_prefix": "web-",
            "owner_id": "831926616791",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e41e62c6aea2dd46"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:security-group/sg-078812f89dbbb58ad",
            "description": "Allow communication between EKS nodes and control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078812f89dbbb58ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "name": "eks-node-security-group",
            "name_prefix": "",
            "owner_id": "831926616791",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "t_my_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0536007c7e2a4527d",
            "arn": "arn:aws:ec2:eu-west-1:831926616791:elastic-ip/eipalloc-0536007c7e2a4527d",
            "domain": "vpc",
            "id": "eipalloc-0536007c7e2a4527d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-30-22-198.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.22.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "t_my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:internet-gateway/igw-020844825e90d13b2",
            "id": "igw-020844825e90d13b2",
            "owner_id": "831926616791",
            "tags": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "t_my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0536007c7e2a4527d",
            "association_id": "eipassoc-0d05147ea51b2b1d3",
            "connectivity_type": "public",
            "id": "nat-0085bf3fc1325d9df",
            "network_interface_id": "eni-03461685adb14ca5a",
            "private_ip": "10.0.1.226",
            "public_ip": "52.30.22.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0639273d427512ccf",
            "tags": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:route-table/rtb-0a7aabc7af65f48ec",
            "id": "rtb-0a7aabc7af65f48ec",
            "owner_id": "831926616791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0085bf3fc1325d9df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:route-table/rtb-0e5790e47917274e1",
            "id": "rtb-0e5790e47917274e1",
            "owner_id": "831926616791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020844825e90d13b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06807ed1115934ec6",
            "route_table_id": "rtb-0a7aabc7af65f48ec",
            "subnet_id": "subnet-0079b4d4941db4cd5"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_3",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab20de7d8a6cfe8",
            "route_table_id": "rtb-0a7aabc7af65f48ec",
            "subnet_id": "subnet-08c26c26ddd8decfe"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_4",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ba48cda07fd2bc8",
            "route_table_id": "rtb-0e5790e47917274e1",
            "subnet_id": "subnet-0639273d427512ccf"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03168006a160f4403",
            "route_table_id": "rtb-0e5790e47917274e1",
            "subnet_id": "subnet-0b3c43ae2a82b945c"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_2",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0639273d427512ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0639273d427512ccf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0b3c43ae2a82b945c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3c43ae2a82b945c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0079b4d4941db4cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0079b4d4941db4cd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-08c26c26ddd8decfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c26c26ddd8decfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "vpc_id": "vpc-055c9f5ac8a1804a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "t_my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:vpc/vpc-055c9f5ac8a1804a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0568e2105f26cbb0f",
            "default_route_table_id": "rtb-074413b19632696e5",
            "default_security_group_id": "sg-06fc1f4e21487d4c2",
            "dhcp_options_id": "dopt-03c98e4d0f7f48393",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055c9f5ac8a1804a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074413b19632696e5",
            "owner_id": "831926616791",
            "tags": {
              "Name": "demo_sabry",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}